--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.1",
+    "@mui/material": "^5.14.14",
     "@types/mapbox-gl": "^2.7.17",
     "mapbox-gl": "^2.15.0",
     "next": "13.5.5",
@@ -16,6 +20,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/mapbox__mapbox-gl-geocoder": "^4.7.6",
     "@types/node": "20.8.7",
     "@types/react": "18.2.29",
     "@types/react-dom": "18.2.13",
