--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
     "@mui/material": "^5.14.14",
+    "@types/geojson": "^7946.0.12",
     "@types/mapbox-gl": "^2.7.17",
     "mapbox-gl": "^2.15.0",
     "next": "13.5.5",
