--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "start:custom": "node server.js"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -16,6 +17,7 @@
     "@mui/material": "^5.14.14",
     "@types/geojson": "^7946.0.12",
     "@types/mapbox-gl": "^2.7.17",
+    "express": "^4.18.2",
     "mapbox-gl": "^2.15.0",
     "next": "13.5.5",
     "react": "18.2.0",
