--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "start:custom": "node server.js"
+    "start:custom": "node server.tsx"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -25,6 +25,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.20",
     "@types/mapbox__mapbox-gl-geocoder": "^4.7.6",
     "@types/node": "20.8.7",
     "@types/react": "18.2.29",
